# egg-mode-playground

./: Cargo.toml
src/: main.rs
