[package]
name = "twitter-rs-playground"
version = "0.1.0"
authors = ["dyoshikawa <dyoshikawa1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.13", features = ["hyper-rustls"], default-features = false }
futures = "0.3"
